--- a/_link-block.scss
+++ b/_link-block.scss
@@ -4,7 +4,7 @@
 //
 // *************************************
 
-// The `link-block` module simply displays a link as block.
+// The link-block object simply displays a link as block.
 
 // Predefine the variables below in order to enable specific features.
 $tree-link-block-namespace:    $tree-namespace !default;
